--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,6 @@
 </head>
 <body>
   <!-- we can use the line below to see all of our data in our template -->
-{{ all_friends }}
 <h1>These are all my friends!</h1>
 <!-- with all the data we can then construct a more structured output -->
 {% for friend in all_friends: %}
@@ -22,5 +21,11 @@
     <label for="occupation">Occupation:<input type="text" name="occupation" id="occupation"></label>
     <input type="submit" value="Add">
   </form>
+  <a href="/update">Modify</a>
+  
+  <form action="/remove_friend/<friend_id>" method="POST">
+    <input type="submit" value="Remove">
+  </form>
+
 </body>
 </html>
